# RustOs

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PROJECT_COMPLETE.md  README.md
docs/: ARCHITECTURE.md  README.md  SMP_POWER.md  TODO.md  api.md  development.md  installation.md  multitasking.md  specs.md  synchronization.md
docs/api/: syscall-api.md
docs/archived/: COMPILATION_INSTRUCTIONS.md  COMPILATION_STATUS.md  COMPILATION_SUCCESS.md  COMPLETE_ACTION_PLAN.md  (+42 more)
mini-os/: Cargo.toml  QEMU_TESTS_WORKAROUND.md  STRUCTURE.txt  TESTING.md  boot_multiboot2.sh  build.rs  build.sh  debug.gdb  debug_qemu.sh  grub.cfg  linker.ld  linker_test.ld  run_iso.sh  run_main.sh  run_ramfs_tests.sh  run_tests.sh  run_tests_grub.sh  rustos.img  verify_iso.sh  x86_64-blog_os.json  x86_64-rustos.json  x86_64-test-kernel.json
mini-os/.cargo/: config.toml
mini-os/docs/: DOCUMENTATION_CHECKLIST.md  DOCUMENTATION_STRUCTURE.txt  EXT3_EXT4_GUIDE.md  EXT4_SYSTEM.md  FINAL_SUMMARY.md  INDEX.md  PROJECT_STRUCTURE.md  README.md  RING3_IMPLEMENTATION.md  RING3_README.md  RING3_SETUP.md  RING3_SUMMARY.md  RING3_TESTING.md  RING3_USAGE.md  SESSION_SUMMARY.md  TROUBLESHOOTING.md
mini-os/isodir_iso/boot/: kernel.elf
mini-os/isodir_iso/boot/grub/: grub.cfg
mini-os/isodir_test/boot/: test-kernel.elf
mini-os/isodir_test/boot/grub/: grub.cfg
mini-os/src/: ethernet.rs  ext2.rs  ext3.rs  ext4.rs  fat32.rs  filesystem.rs  fs_manager.rs  gpt.rs  hardware.rs  interrupts.rs  keyboard.rs  lib.rs  main.rs  main.rs.backup  memory.rs  mouse.rs  multiboot2.rs  multiboot2_header.S  paging.rs  pci.rs  power.rs  ring3.rs  ring3_example.rs  ring3_memory.rs  serial.rs  storage.rs  test_runner.rs  ufat.rs  vga_buffer.rs
mini-os/src/acpi/: fadt.rs  madt.rs  mod.rs  tables.rs
mini-os/src/device_manager/: audio.rs  bluetooth.rs  ethernet.rs  events.rs  hotplug.rs  mod.rs  pci.rs  usb.rs  video.rs  wifi.rs
mini-os/src/drivers/: bluetooth_hci.rs  bluetooth_l2cap.rs  disk.rs  mock_serial.rs  mod.rs  network.rs  nvme.rs  nvme_cache.rs  nvme_queue.rs  serial_trait.rs  usb_controller.rs  usb_hid.rs  usb_mass_storage.rs  usb_protocol.rs
mini-os/src/drivers/gpu/: mod.rs  primitives.rs  vesa.rs  vga.rs
mini-os/src/fs/: acl.rs  ext2_extent.rs  fat32_cache.rs  fd.rs  journal.rs  mod.rs  permissions.rs  ramfs.rs  sparse.rs  symlink.rs  vfs_core.rs  vfs_dentry.rs  vfs_inode.rs  vfs_mount.rs
mini-os/src/fs/cache/: buffer.rs  mod.rs  readahead.rs  writeback.rs
mini-os/src/interrupts/: apic.rs
mini-os/src/ipc/: mod.rs  mqueue.rs  pipe.rs  semaphore.rs
mini-os/src/libc/: mod.rs  stdio.rs  stdlib.rs  string.rs
mini-os/src/memory/: hybrid.rs  mmap.rs  shm.rs  slab.rs
mini-os/src/memory/vm/: cow.rs  demand.rs  hugepage.rs  lru.rs  mod.rs  pagecache.rs  swap.rs
mini-os/src/net/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  http.rs  icmp.rs  interface.rs  ipv4.rs  mod.rs  socket.rs  tcp.rs  udp.rs
mini-os/src/network/: dns.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
mini-os/src/network/tools/: ifconfig.rs  ip.rs  mod.rs  netstat.rs  ping.rs
mini-os/src/process/: elf.rs  mod.rs  signal.rs  thread.rs
mini-os/src/scheduler/: cfs.rs  config.rs  mod.rs  policy.rs
mini-os/src/shell/: device_commands.rs  mod.rs
mini-os/src/smp/: mod.rs  percpu.rs  trampoline.rs
mini-os/src/sync/: mod.rs
mini-os/src/syscall/: mod.rs
mini-os/src/terminal/: mod.rs
mini-os/tests/: device_detection_tests.rs  ramfs_tests.rs
(+3 files in other folders)
