[package]
name = "mini-os"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
harness = false
doctest = false  # Tests unitaires ne peuvent pas s'exécuter en mode no_std standard

[[bin]]
name = "mini-os"
path = "src/main.rs"
required-features = ["usb", "bluetooth"]

[[test]]
name = "ramfs_tests"
path = "tests/ramfs_tests.rs"
harness = false


[features]
default = ["alloc", "usb", "bluetooth"]
alloc = []
usb = []
bluetooth = []
smp = []  # SMP support (optional, disabled by default due to trampoline issues)
test-mode = []  # Mode test pour QEMU

[dependencies]
x86_64 = "0.14.2"
spin = { version = "0.9.8", features = ["spin_mutex"] }
volatile = "0.2.7"
pc-keyboard = { version = "0.5.1", default-features = false }
bitflags = "1.3.2"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
log = { version = "0.4.29", default-features = false }
raw-cpuid = "10.7.0"
bit_field = "0.10.2"
uart_16550 = "0.2.0"

# Pour le support de l'allocation
linked_list_allocator = { version = "0.10.1", optional = true }

# Pour le support du système de fichiers
vfs = { version = "0.8.0", optional = true }

# smoltcp = { version = "0.8.0", default-features = false, features = ["alloc", "log", "proto-ipv4", "proto-ipv6", "socket-udp", "socket-tcp", "socket-raw"], optional = true }




[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1

# Configuration bootimage pour les tests QEMU (legacy - may be removed)
